# expenses_app

./: .gitignore  pyproject.toml
expenses_app/: __init__.py  __main__.py  builder_imports.py  constants.py  imports.py
expenses_app/api/graphql/: graphql_resolvers.py  graphql_schema.py  graphql_server.py  graphql_tools.py  imports.py
expenses_app/api/graphql/graphql_mutations/: graphql_login.py
expenses_app/domain/: auth_wall.py  domain_imports.py
expenses_app/domain/services/: cryptography_service.py  data_service.py  domain_imports.py  expense_analysis_service.py  login_service.py
expenses_app/infra/: database.py  declarative_model_base.py  repository.py
expenses_app/infra/models/: expense.py  user.py
expenses_app/infra/models/categories/: cat_budget_impact.py  cat_emotional.py  cat_expense_feel.py  cat_expense_type.py  cat_social.py  categories_base.py
expenses_app/infra/models/data_analysis/: user_avr_expense_feel.py  user_avr_expense_type.py  user_data_avr_emotional.py  user_data_avr_social.py  user_data_avr_time_period.py  user_relation_emotional_period.py  user_relation_emotional_social.py  user_relation_social_period.py
src/: __init__.py  imports.py  main.py  pyproject.toml
src/api/: server.py
src/api/graphql/: graphql_tools.py  imports.py  schema.graphql.py  schema_graphql.py
src/infra/: database.py  declarative_model_base.py
src/infra/models/: expense.py  user.py
src/infra/models/categories/: cat_budget_impact.py  cat_emotional.py  cat_expense_feel.py  cat_expense_type.py  cat_social.py  categories_base.py
