[project]
name = "expenses_app"
version = "0.0.1"
authors = [
    { name="Matheus Vitorino", email="matheusvs122@gmail.com" },
]
description="small app to track and analyse personal expenses"
dependencies = [
    "flask",
    "flask-cors",
    "flask-sqlalchemy",
    "sqlalchemy"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"